--- a/src/pages/editor/clientes.html
+++ b/src/pages/editor/clientes.html
@@ -34,7 +34,7 @@
     </header>
      <section class="formulario">
         <h1 class="client">Adicionar um CLiente</h1>
-        <form class="client-form" action="https://formsubmit.co/evertondiasbrito@gmail.com" method="POST">
+        <form class="client-form" action="processar-dados.php" method="POST">
             
             <input type="text" id="" name="cliente" placeholder="Cliente" required>
             <input type="text" id="endereco" name="endereco" placeholder="Endereço" required>
