--- a/src/pages/editor/clientes.html
+++ b/src/pages/editor/clientes.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
 <html lang="pt-br">
 
 <head>
@@ -17,7 +16,7 @@
     <header>
         
         <div class="logo">
-            <img class="logo-img" src="c:\Users\HP\Desktop\App Dona\img\donalogo.png" width= 20% alt ="logomarca Dona">
+            <img class="logo-img" src="../../../img/donalogo.png" width= 20% alt ="logomarca Dona">
             Dona Lavanderia
             
         </div>
