--- a/src/pages/editor/index.html
+++ b/src/pages/editor/index.html
@@ -17,7 +17,7 @@
     <header>
         
         <div class="logo">
-            <img class="logo-img" src="c:\Users\HP\Desktop\App Dona\img\donalogo.png" width= 20% alt ="logomarca Dona">
+            <img class="logo-img" src="../../../img/donalogo.png" width= 20% alt ="logomarca Dona">
             Dona Lavanderia
             
         </div>
