--- a/src/pages/editor/index.html
+++ b/src/pages/editor/index.html
@@ -15,11 +15,11 @@
 
 <body>
     <header>
-        
+
         <div class="logo">
-            <img class="logo-img" src="../../../img/donalogo.png" width= 20% alt ="logomarca Dona">
+            <img class="logo-img" src="../../../img/donalogo.png" width=20% alt="logomarca Dona">
             Dona Lavanderia
-            
+
         </div>
         <nav>
             <ul>
@@ -33,7 +33,7 @@
 
     </header>
     <main class="container">
-        <table> 
+        <table>
             <thead>
                 <tr>
                     <th>Pedido</th>
@@ -45,7 +45,9 @@
             <tbody>
                 <tr>
                     <td>01</td>
-                    <td>joao</td>
+                    <td>
+                        <?php echo $row['cliente']; ?>
+                    </td>
                     <td>01/11/2025</td>
                     <td>Aberto</td>
                 </tr>
